--- a/public/views/homePage.html
+++ b/public/views/homePage.html
@@ -36,12 +36,12 @@
     <%- include("ejsModules/menu.ejs") %>
 
     <!-- #region Main content -->
-      <div class="contentDiv">
-        <% allTierListsInfo.forEach(function(tierListInfo) { %>
+    <div class="contentDiv">
+      <% allTierListsInfo.forEach(function(tierListInfo) { %>
       <a href="/tierList?tierListName=<%= tierListInfo.fileName %>">
-          <div class="oneTierListSet">
+        <div class="oneTierListSet">
           <label><%= tierListInfo.fileName %></label>
-            <div class="horizontalScrollDiv disableTextSelection scrollable">
+          <div class="horizontalScrollDiv disableTextSelection scrollable">
             <% tierListInfo.imgNames.forEach(function(imgName) { %>
             <img src="./imgSets/<%= tierListInfo.fileName %>/<%= imgName %>" />
             <% }) %>
@@ -55,4 +55,7 @@
     <!-- Footer container-->
     <%- include("ejsModules/footer.ejs") %>
   </body>
+include("ejsModules/footer.ejs") %>
+  
+</body>
 </html>
