--- a/public/views/ejsModules/footer.ejs
+++ b/public/views/ejsModules/footer.ejs
@@ -1,11 +1,11 @@
-<footer class="footerDistributed">
-  <div class="footerRight disableTextSelection">
-    <a href="https://vk.com/oo0ooo0ooo0ooo0ooo0ooo0ooo0oo"><i class="fa faVk"></i></a>
-    <a href="https://github.com/lxvdnl"><i class="fa faGithub"></i></a>
+<footer class="footer-distributed">
+  <div class="footer-right disable-text-selection">
+    <a href="https://vk.com/oo0ooo0ooo0ooo0ooo0ooo0ooo0oo"><i class="fa fa-vk"></i></a>
+    <a href="https://github.com/lxvdnl"><i class="fa fa-github"></i></a>
   </div>
-  <div class="footerLeft">
-    <p class="footerLinks disableTextSelection">
-      <a class="footerFirstLink" href="/">Home</a>
+  <div class="footer-left">
+    <p class="footer-links disable-text-selection">
+      <a class="footer-first-link" href="/">Home</a>
       <a href="/createTierList">Create tier list</a>
       <a href="/help">Help</a>
     </p>
