--- a/public/views/ejsModules/menu.ejs
+++ b/public/views/ejsModules/menu.ejs
@@ -1,8 +1,8 @@
-<nav class="menuNav">
-  <div class="menuTitle">Tier list</div>    
-  <ul class="menuList disableTextSelection">
-    <a class="menuLink" href="/"><li class="menuItem">Home</li></a>
-    <a class="menuLink" href="/createTierList"><li class="menuItem">Create tier list</li></a>
-    <a class="menuLink" href="/help"><li class="menuItem">Help</li></a>
+<nav class="menu-nav">
+  <div class="menu-title">Tier list</div>    
+  <ul class="menu-list disable-text-selection">
+    <a class="menu-link" href="/"><li class="menu-item">Home</li></a>
+    <a class="menu-link" href="/createTierList"><li class="menu-item">Create tier list</li></a>
+    <a class="menu-link" href="/help"><li class="menu-item">Help</li></a>
   </ul>
 </nav>
