--- a/public/views/help.html
+++ b/public/views/help.html
@@ -16,7 +16,7 @@
     <%- include("ejsModules/menu.ejs") %>
 
     <!-- #region Main content -->
-    <div id="helpTextAreaDiv">
+    <div id="help-text-area-div">
       <p>Help page</p>
     </div>
     <!-- #endregion -->
