--- a/public/views/tierList.html
+++ b/public/views/tierList.html
@@ -16,7 +16,7 @@
     <%- include("ejsModules/menu.ejs") %>
 
     <!-- #region Main content -->
-    <div class="contentDiv">
+    <div class="content-div">
       <h1><%= tierListName %></h1>
     </div>
     <!-- #endregion -->
