--- a/public/views/ejsModules/footer.ejs
+++ b/public/views/ejsModules/footer.ejs
@@ -9,6 +9,6 @@
       <a href="/createTierList">Create tier list</a>
       <a href="/help">Help</a>
     </p>
-    <p>Company lxvdnl &copy; 2023</p>
+    <p class="footer-company-text">Company lxvdnl &copy; 2023</p>
   </div>
 </footer>
