--- a/public/tierList.css
+++ b/public/tierList.css
@@ -364,7 +364,7 @@ input::-webkit-calendar-picker-indicator {
 }
 
 .footer-distributed .footer-left p {
-  color: #9e9e9e;
+  color: #a7a7a7;
   font-size: 16px;
   margin: 0;
 }
